flask-hello/hello-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-service
          servicePort: 5000
